--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RockPaperScissors</title>
-    
+    <script src = "main.js" defer></script>
+    <link rel="styleSheet" href = "style.css">
 </head>
 <body>
-    <script src = "main.js"></script>
+    <div class = "textLine">
+
+    </div>
+    <div class="buttons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
 </body>
 </html>
